--- a/index.html
+++ b/index.html
@@ -21,10 +21,41 @@
                 <li><a href="nuestras-peliculas.html">NUESTRAS PELICULAS</a></li>
                 <li><a href="novedades.html">NOVEDADES</a></li>
                 <li><a href="contacto.html">CONTACTO</a></li>
+                <li><a href="contacto.html">INGRESAR</a></li>
                 <li><a href="carrito.html"><i class="fas fa-shopping-cart"></i></a></li>
             </ul>
         </nav>
     </header>
+
+    <main>
+        <a href="#top">
+            <i class="fas fa-angle-double-up"></i>
+        </a>
+        
+        <section>
+            <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img src="../img/A.jpg" class="d-block w-100" alt="...">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="../img/B.png" class="d-block w-100" alt="...">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="../img/cave.jpg" class="d-block w-100" alt="...">
+                  </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Next</span>
+                </button>
+              </div>
+        </section>
+    </main>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
