--- a/index.html
+++ b/index.html
@@ -33,27 +33,26 @@
         </a>
         
         <section>
-            <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
-                <div class="carousel-inner">
-                  <div class="carousel-item active">
-                    <img src="../img/A.jpg" class="d-block w-100" alt="...">
-                  </div>
-                  <div class="carousel-item">
-                    <img src="../img/B.png" class="d-block w-100" alt="...">
-                  </div>
-                  <div class="carousel-item">
-                    <img src="../img/cave.jpg" class="d-block w-100" alt="...">
-                  </div>
-                </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
-                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                  <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
-                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                  <span class="visually-hidden">Next</span>
-                </button>
-              </div>
+          <div class="flex-container">
+            <div class="container-mayor-izquierda">
+              <img src="../img/cave.jpg" alt="foto">
+            </div> 
+            <div class="container-menor-derecha">
+              <h2>¡Bienvenidos a CinemaFusion Films!</h2>
+              <p>
+                En CinemaFusion Films nos dedicamos a la producción, distribución y venta de películas que cautivan, emocionan 
+                y entretienen a nuestro público.
+              </p>
+              <p>
+                Nuestro sitio web es tu ventana al mundo del cine, donde podrás explorar 
+                nuestras producciones, adquirir nuestras peliculas, conocer más sobre nuestro equipo, 
+                descubrir nuestras últimas novedades y mantenerte conectado con nosotros a través de nuestras redes sociales. 
+              </p>
+              <p>
+                ¡Explora, descubre y disfruta del maravilloso mundo del cine con CinemaFusion Films!
+              </p> 
+            </div> 
+          </div>
         </section>
     </main>
 
