--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CinemaFusion Films</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
     <header>
         <nav class="navbar">
@@ -31,31 +34,109 @@
         <a href="#top">
             <i class="fas fa-angle-double-up"></i>
         </a>
-        
+
         <section>
-          <div class="flex-container">
-            <div class="container-mayor-izquierda">
-              <img src="../img/cave.jpg" alt="foto">
-            </div> 
-            <div class="container-menor-derecha">
-              <h2>¡Bienvenidos a CinemaFusion Films!</h2>
-              <p>
-                En CinemaFusion Films nos dedicamos a la producción, distribución y venta de películas que cautivan, emocionan 
-                y entretienen a nuestro público.
-              </p>
-              <p>
-                Nuestro sitio web es tu ventana al mundo del cine, donde podrás explorar 
-                nuestras producciones, adquirir nuestras peliculas, conocer más sobre nuestro equipo, 
-                descubrir nuestras últimas novedades y mantenerte conectado con nosotros a través de nuestras redes sociales. 
-              </p>
-              <p>
-                ¡Explora, descubre y disfruta del maravilloso mundo del cine con CinemaFusion Films!
-              </p> 
-            </div> 
-          </div>
+            <div class="flex-container">
+                <div class="container-mayor-izquierda">
+                    <img src="../img/cave.jpg" alt="foto">
+                </div>
+                <div class="container-menor-derecha">
+                    <h2>¡Bienvenidos a CinemaFusion Films!</h2>
+                    <p>
+                        En CinemaFusion Films nos dedicamos a la producción, distribución y venta de películas que
+                        cautivan,
+                        emocionan
+                        y entretienen a nuestro público.
+                    </p>
+                    <p>
+                        Nuestro sitio web es tu ventana al mundo del cine, donde podrás explorar
+                        nuestras producciones, adquirir nuestras peliculas, conocer más sobre nuestro equipo,
+                        descubrir nuestras últimas novedades y mantenerte conectado con nosotros a través de nuestras
+                        redes
+                        sociales.
+                    </p>
+                    <p>
+                        ¡Explora, descubre y disfruta del maravilloso mundo del cine con CinemaFusion Films!
+                    </p>
+
+                    <a href="acerca-de.html" class="btn btn-danger conocenos-btn">CONOCENOS</a>
+                </div>
+            </div>
+        </section>
+
+        <section>
+            <div class="banner">
+                <h2>SECCIONES</h2>
+            </div>
+        </section>
+
+        <section class="container my-4">
+            <div class="container">
+                <div class="row">
+                  <div class="col-md-4 mb-3">
+                    <div class="card">
+                      <img src="../img/A.jpg" class="card-img-top" alt="...">
+                      <div class="card-body">
+                        <h5 class="card-title text-center">ACERCA DE</h5>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-md-4 mb-3">
+                    <div class="card">
+                      <img src="../img/A.jpg" class="card-img-top" alt="...">
+                      <div class="card-body">
+                        <h5 class="card-title text-center">NUESTRAS PELICULAS</h5>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-md-4 mb-3">
+                    <div class="card">
+                      <img src="../img/A.jpg" class="card-img-top" alt="...">
+                      <div class="card-body">
+                        <h5 class="card-title text-center">NOVEDADES</h5>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col-md-4 mb-3">
+                    <div class="card">
+                      <img src="../img/A.jpg" class="card-img-top" alt="...">
+                      <div class="card-body">
+                        <h5 class="card-title text-center">CONTACTO</h5>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-md-4 mb-3">
+                    <div class="card">
+                      <img src="../img/A.jpg" class="card-img-top" alt="...">
+                      <div class="card-body">
+                        <h5 class="card-title text-center">INGRESAR</h5>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-md-4 mb-3">
+                    <div class="card">
+                      <img src="../img/A.jpg" class="card-img-top" alt="...">
+                      <div class="card-body">
+                        <h5 class="card-title text-center">CARRITO</h5>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
         </section>
     </main>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <footer>
+        <div>
+          <p>&copy; 2024 CinemaFusion Films</p>
+        </div>
+    </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
