index redesign, add nuestras-peliculas, terrifier 2 gooddd

--- a/index.html
+++ b/index.html
@@ -43,20 +43,17 @@
         <div class="container-menor-derecha">
           <h2>¡Bienvenidos a CinemaFusion Films!</h2>
           <p>
-            En CinemaFusion Films nos dedicamos a la producción, distribución y venta de películas que
-            cautivan,
-            emocionan
-            y entretienen a nuestro público.
+              En CinemaFusion Films nos especializamos en la producción, distribución y venta de películas
+              del género de horror que te helarán la sangre y te robarán el sueño.
           </p>
           <p>
-            Nuestro sitio web es tu ventana al mundo del cine, donde podrás explorar
-            nuestras producciones, adquirir nuestras peliculas, conocer más sobre nuestro equipo,
-            descubrir nuestras últimas novedades y mantenerte conectado con nosotros a través de nuestras
-            redes
-            sociales.
+              Nuestro sitio web es tu portal al oscuro mundo del cine de horror, donde podrás explorar
+              nuestras inquietantes producciones, adquirir películas que te harán temblar, conocer a nuestro
+              macabro equipo, descubrir las más recientes novedades y mantenerte en contacto con nosotros a través de nuestras
+              siniestras redes sociales.
           </p>
           <p>
-            ¡Explora, descubre y disfruta del maravilloso mundo del cine con CinemaFusion Films!
+              ¡Te invitamos a un viaje sin retorno a través de nuestro sitio web en CinemaFusion Films!
           </p>
 
           <a href="acerca-de.html" class="btn btn-danger conocenos-btn">CONOCENOS</a>
@@ -70,57 +67,55 @@
       </div>
     </section>
 
-    <section class="container my-4">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-4 mb-3">
-            <div class="card">
-              <img src="../img/A.jpg" class="card-img-top" alt="...">
-              <div class="card-body">
-                <h5 class="card-title text-center">ACERCA DE</h5>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4 mb-3">
-            <div class="card">
-              <img src="../img/A.jpg" class="card-img-top" alt="...">
-              <div class="card-body">
-                <h5 class="card-title text-center">NUESTRAS PELICULAS</h5>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4 mb-3">
-            <div class="card">
-              <img src="../img/A.jpg" class="card-img-top" alt="...">
-              <div class="card-body">
-                <h5 class="card-title text-center">NOVEDADES</h5>
-              </div>
+    <section class="container grid-inicio">
+      <div class="row gy-3 mt-3 mb-3">
+        <div class="col-md-4">
+          <div class="card">
+            <img src="../img/grid-inicio/acerca-de.jpg" class="card-img-top" alt="...">
+            <div class="card-body cuerpo-card">
+              <h5 class="card-title text-center">ACERCA DE</h5>
             </div>
           </div>
         </div>
-        <div class="row">
-          <div class="col-md-4 mb-3">
-            <div class="card">
-              <img src="../img/A.jpg" class="card-img-top" alt="...">
-              <div class="card-body">
-                <h5 class="card-title text-center">CONTACTO</h5>
-              </div>
+        <div class="col-md-4">
+          <div class="card">
+            <img src="../img/grid-inicio/nuestras-peliculas.jpg" class="card-img-top" alt="...">
+            <div class="card-body cuerpo-card">
+              <h5 class="card-title text-center">NUESTRAS PELICULAS</h5>
             </div>
           </div>
-          <div class="col-md-4 mb-3">
-            <div class="card">
-              <img src="../img/A.jpg" class="card-img-top" alt="...">
-              <div class="card-body">
-                <h5 class="card-title text-center">INGRESAR</h5>
-              </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card">
+            <img src="../img/grid-inicio/novedades.jpg" class="card-img-top" alt="...">
+            <div class="card-body cuerpo-card">
+              <h5 class="card-title text-center">NOVEDADES</h5>
             </div>
           </div>
-          <div class="col-md-4 mb-3">
-            <div class="card">
-              <img src="../img/A.jpg" class="card-img-top" alt="...">
-              <div class="card-body">
-                <h5 class="card-title text-center">CARRITO</h5>
-              </div>
+        </div>
+      </div>
+      <div class="row gy-3 mb-4">
+        <div class="col-md-4">
+          <div class="card">
+            <img src="../img/grid-inicio/contacto.jpg" class="card-img-top" alt="...">
+            <div class="card-body cuerpo-card">
+              <h5 class="card-title text-center">CONTACTO</h5>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card">
+            <img src="../img/grid-inicio/login.jpg" class="card-img-top" alt="...">
+            <div class="card-body cuerpo-card">
+              <h5 class="card-title text-center">INGRESAR</h5>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card">
+            <img src="../img/grid-inicio/carrito.jpg" class="card-img-top" alt="...">
+            <div class="card-body cuerpo-card">
+              <h5 class="card-title text-center">CARRITO</h5>
             </div>
           </div>
         </div>
