--- a/nuestras-peliculas.html
+++ b/nuestras-peliculas.html
@@ -36,130 +36,127 @@
     </a>
 
     <section>
-        <div class="banner">
-          <h2>HORROR</h2>
-        </div>
-      </section>
-  
-      <section class="container my-4">
-        <div class="container">
-          <div class="row">
-            <div class="col-md-4 mb-3">
-              <div class="card">
-                <img src="../img/A.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title text-center">ACERCA DE</h5>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-4 mb-3">
-              <div class="card">
-                <img src="../img/A.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title text-center">NUESTRAS PELICULAS</h5>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-4 mb-3">
-              <div class="card">
-                <img src="../img/A.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title text-center">NOVEDADES</h5>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-md-4 mb-3">
-              <div class="card">
-                <img src="../img/A.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title text-center">CONTACTO</h5>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-4 mb-3">
-              <div class="card">
-                <img src="../img/A.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title text-center">INGRESAR</h5>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-4 mb-3">
-              <div class="card">
-                <img src="../img/A.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title text-center">CARRITO</h5>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
+      <div class="banner">
+        <h2>ESTRENOS</h2>
+      </div>
+    </section>
 
-      <section>
-        <div class="banner">
-          <h2>HORROR</h2>
-        </div>
-      </section>
-  
-      <section class="container my-4">
-        <div class="container">
-          <div class="row">
-            <div class="col-md-4 mb-3">
-              <div class="card">
-                <img src="../img/A.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title text-center">ACERCA DE</h5>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-4 mb-3">
-              <div class="card">
-                <img src="../img/A.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title text-center">NUESTRAS PELICULAS</h5>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-4 mb-3">
-              <div class="card">
-                <img src="../img/A.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title text-center">NOVEDADES</h5>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-md-4 mb-3">
-              <div class="card">
-                <img src="../img/A.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title text-center">CONTACTO</h5>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-4 mb-3">
-              <div class="card">
-                <img src="../img/A.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title text-center">INGRESAR</h5>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-4 mb-3">
-              <div class="card">
-                <img src="../img/A.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title text-center">CARRITO</h5>
-                </div>
-              </div>
+    <section class="container grid-inicio">
+      <div class="row gy-3 mt-3 mb-3">
+        <div class="col-md-4">
+          <div class="card">
+            <img src="../img/grid-peliculas/terrifier.jpg" class="card-img-top" alt="...">
+            <div class="card-body cuerpo-card">
+              <h5 class="card-title text-center">TERRIFIER 2</h5>
             </div>
           </div>
         </div>
-      </section>
+        <div class="col-md-4">
+          <div class="card">
+            <img src="../img/grid-peliculas/pearl.jpg" class="card-img-top" alt="...">
+            <div class="card-body cuerpo-card">
+              <h5 class="card-title text-center">PEARL</h5>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card">
+            <img src="../img/grid-peliculas/cuando-acecha.jpg" class="card-img-top" alt="...">
+            <div class="card-body cuerpo-card">
+              <h5 class="card-title text-center">CUANDO ACECHA LA MALDAD</h5>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row gy-3 mb-4">
+        <div class="col-md-4">
+          <div class="card">
+            <img src="../img/grid-peliculas/hereditary.jpg" class="card-img-top" alt="...">
+            <div class="card-body cuerpo-card">
+              <h5 class="card-title text-center">HEREDITARY</h5>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card">
+            <img src="../img/grid-peliculas/midsommar.jpg" class="card-img-top" alt="...">
+            <div class="card-body cuerpo-card">
+              <h5 class="card-title text-center">MIDSOMMAR</h5>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card">
+            <img src="../img/grid-peliculas/smile.jpg" class="card-img-top" alt="...">
+            <div class="card-body cuerpo-card">
+              <h5 class="card-title text-center">SMILE</h5>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+  </main>
+
+  <section>
+    <div class="banner">
+      <h2>CLASICOS DE SIEMPRE</h2>
+    </div>
+  </section>
+
+  <section class="container grid-inicio">
+    <div class="row gy-3 mt-3 mb-3">
+      <div class="col-md-4">
+        <div class="card">
+          <img src="../img/grid-peliculas/suspiria.jpg" class="card-img-top" alt="...">
+          <div class="card-body cuerpo-card">
+            <h5 class="card-title text-center">SUSPIRIA</h5>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="card">
+          <img src="../img/grid-peliculas/dracula.jpg" class="card-img-top" alt="...">
+          <div class="card-body cuerpo-card">
+            <h5 class="card-title text-center">DRACULA</h5>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="card">
+          <img src="../img/grid-peliculas/exorcist.jpg" class="card-img-top" alt="...">
+          <div class="card-body cuerpo-card">
+            <h5 class="card-title text-center">THE EXORCIST</h5>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="row gy-3 mb-4">
+      <div class="col-md-4">
+        <div class="card">
+          <img src="../img/grid-peliculas/inferno.jpg" class="card-img-top" alt="...">
+          <div class="card-body cuerpo-card">
+            <h5 class="card-title text-center">INFERNO</h5>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="card">
+          <img src="../img/grid-peliculas/rosemary.jpg" class="card-img-top" alt="...">
+          <div class="card-body cuerpo-card">
+            <h5 class="card-title text-center">ROSEMARY'S BABY</h5>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="card">
+          <img src="../img/grid-peliculas/demons.jpg" class="card-img-top" alt="...">
+          <div class="card-body cuerpo-card">
+            <h5 class="card-title text-center">DEMONS</h5>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
   </main>
 
   <footer>
