Emprolije el css, agrege fonts que son goooooodddd y no me acuerdo que mas pero quedo piola

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </a>
 
     <section>
-      <div class="flex-container">
+      <div class="container-principal-home">
         <div class="container-mayor-izquierda">
           <img src="../img/cave.jpg" alt="foto">
         </div>
@@ -71,7 +71,9 @@
       <div class="row gy-3 mt-3 mb-3">
         <div class="col-md-4">
           <div class="card">
-            <img src="../img/grid-inicio/acerca-de.jpg" class="card-img-top" alt="...">
+            <a href="acerca-de.html">
+              <img src="../img/grid-inicio/acerca-de.jpg" class="card-img-top" alt="...">
+            </a>
             <div class="card-body cuerpo-card">
               <h5 class="card-title text-center">ACERCA DE</h5>
             </div>
@@ -79,7 +81,9 @@
         </div>
         <div class="col-md-4">
           <div class="card">
-            <img src="../img/grid-inicio/nuestras-peliculas.jpg" class="card-img-top" alt="...">
+            <a href="nuestras-peliculas.html">
+              <img src="../img/grid-inicio/nuestras-peliculas.jpg" class="card-img-top" alt="...">
+            </a>
             <div class="card-body cuerpo-card">
               <h5 class="card-title text-center">NUESTRAS PELICULAS</h5>
             </div>
@@ -87,7 +91,9 @@
         </div>
         <div class="col-md-4">
           <div class="card">
-            <img src="../img/grid-inicio/novedades.jpg" class="card-img-top" alt="...">
+            <a href="novedades.html">
+              <img src="../img/grid-inicio/novedades.jpg" class="card-img-top" alt="...">
+            </a>
             <div class="card-body cuerpo-card">
               <h5 class="card-title text-center">NOVEDADES</h5>
             </div>
@@ -97,7 +103,9 @@
       <div class="row gy-3 mb-4">
         <div class="col-md-4">
           <div class="card">
-            <img src="../img/grid-inicio/contacto.jpg" class="card-img-top" alt="...">
+            <a href="contacto.html">
+              <img src="../img/grid-inicio/contacto.jpg" class="card-img-top" alt="...">
+            </a>
             <div class="card-body cuerpo-card">
               <h5 class="card-title text-center">CONTACTO</h5>
             </div>
@@ -105,7 +113,9 @@
         </div>
         <div class="col-md-4">
           <div class="card">
-            <img src="../img/grid-inicio/login.jpg" class="card-img-top" alt="...">
+            <a href="login.html">
+              <img src="../img/grid-inicio/login.jpg" class="card-img-top" alt="...">
+            </a>
             <div class="card-body cuerpo-card">
               <h5 class="card-title text-center">INGRESAR</h5>
             </div>
@@ -113,7 +123,9 @@
         </div>
         <div class="col-md-4">
           <div class="card">
-            <img src="../img/grid-inicio/carrito.jpg" class="card-img-top" alt="...">
+            <a href="carrito.html">
+              <img src="../img/grid-inicio/carrito.jpg" class="card-img-top" alt="...">
+            </a>
             <div class="card-body cuerpo-card">
               <h5 class="card-title text-center">CARRITO</h5>
             </div>
