--- a/nuestras-peliculas.html
+++ b/nuestras-peliculas.html
@@ -45,7 +45,9 @@
       <div class="row gy-3 mt-3 mb-3">
         <div class="col-md-4">
           <div class="card">
-            <img src="../img/grid-peliculas/terrifier.jpg" class="card-img-top" alt="...">
+            <a href="nuestras-peliculas/terrifier-2.html">
+              <img src="../img/grid-peliculas/terrifier.jpg" class="card-img-top" alt="...">
+            </a>
             <div class="card-body cuerpo-card">
               <h5 class="card-title text-center">TERRIFIER 2</h5>
             </div>
