--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
   <header>
     <nav class="navbar">
       <div class="navbar-izquierda">
-        <a href="#"><img src="../img/logo.png" alt="Logo" class="logo"></a>
-        <h1><a href="#" class="titulo">CinemaFusion Films</a></h1>
+        <a href="#"><img src="../img/logo-3.png" alt="Logo" class="logo"></a>
       </div>
 
       <ul class="nav-derecha">
