--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <li><a href="nuestras-peliculas.html">NUESTRAS PELICULAS</a></li>
         <li><a href="novedades.html">NOVEDADES</a></li>
         <li><a href="contacto.html">CONTACTO</a></li>
-        <li><a href="contacto.html">INGRESAR</a></li>
+        <li><a href="ingresar.html">INGRESAR</a></li>
         <li><a href="carrito.html"><i class="fas fa-shopping-cart"></i></a></li>
       </ul>
     </nav>
