Ahora index, nuestras peliculas y peliculas son full responsive

--- a/ingresar.html
+++ b/ingresar.html
@@ -16,7 +16,7 @@
   <header>
     <nav class="navbar">
       <div class="navbar-izquierda">
-        <a href="#"><img src="../img/logo-3.png" alt="Logo" class="logo"></a>
+        <a href="index.html"><img src="../img/logo-3.png" alt="Logo" class="logo"></a>
       </div>
 
       <ul class="nav-derecha">
@@ -24,7 +24,7 @@
         <li><a href="nuestras-peliculas.html">NUESTRAS PELICULAS</a></li>
         <li><a href="novedades.html">NOVEDADES</a></li>
         <li><a href="contacto.html">CONTACTO</a></li>
-        <li><a href="ingresar.html">INGRESAR</a></li>
+        <li><a href="#">INGRESAR</a></li>
         <li><a href="carrito.html"><i class="fas fa-shopping-cart"></i></a></li>
       </ul>
     </nav>
