--- a/acerca-de.html
+++ b/acerca-de.html
@@ -16,11 +16,11 @@
   <header>
     <nav class="navbar">
       <div class="navbar-izquierda">
-        <a href="#"><img src="../img/logo-3.png" alt="Logo" class="logo"></a>
+        <a href="index.html"><img src="../img/logo-3.png" alt="Logo" class="logo"></a>
       </div>
 
       <ul class="nav-derecha">
-        <li><a href="acerca-de.html">ACERCA DE</a></li>
+        <li><a href="#">ACERCA DE</a></li>
         <li><a href="nuestras-peliculas.html">NUESTRAS PELICULAS</a></li>
         <li><a href="novedades.html">NOVEDADES</a></li>
         <li><a href="contacto.html">CONTACTO</a></li>
