--- a/nuestras-peliculas/terrifier-2.html
+++ b/nuestras-peliculas/terrifier-2.html
@@ -8,24 +8,24 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="../styles.css">
-    <link rel="stylesheet" href="../styles-peliculas.css">
+    <link rel="stylesheet" href="../styles/styles-base.css">
+    <link rel="stylesheet" href="../styles/styles-peliculas.css">
 </head>
 
 <body>
     <header>
         <nav class="navbar">
             <div class="navbar-izquierda">
-                <a href="#"><img src="../img/logo-3.png" alt="Logo" class="logo"></a>
+                <a href="../index.html"><img src="../img/logo-3.png" alt="Logo" class="logo"></a>
             </div>
 
             <ul class="nav-derecha">
-                <li><a href="acerca-de.html">ACERCA DE</a></li>
-                <li><a href="nuestras-peliculas.html">NUESTRAS PELICULAS</a></li>
-                <li><a href="novedades.html">NOVEDADES</a></li>
-                <li><a href="contacto.html">CONTACTO</a></li>
-                <li><a href="contacto.html">INGRESAR</a></li>
-                <li><a href="carrito.html"><i class="fas fa-shopping-cart"></i></a></li>
+                <li><a href="../acerca-de.html">ACERCA DE</a></li>
+                <li><a href="../nuestras-peliculas.html">NUESTRAS PELICULAS</a></li>
+                <li><a href="../novedades.html">NOVEDADES</a></li>
+                <li><a href="../contacto.html">CONTACTO</a></li>
+                <li><a href="../contacto.html">INGRESAR</a></li>
+                <li><a href="../carrito.html"><i class="fas fa-shopping-cart"></i></a></li>
             </ul>
         </nav>
     </header>
