actualizacion novedades, agregado de caja comentarios y cards de otros articulos

--- a/novedades.html
+++ b/novedades.html
@@ -72,6 +72,47 @@
             <p>Con su incorporación a Netflix, Cuando acecha la maldad ahora estará disponible para una audiencia masiva que esté dispuesta a experimentar un tipo de terror fresco y original. Una oportunidad perfecta para sumergirse en una obra que promete dejar una marca imborrable en la memoria de quiénes se atrevan a verla.</p>
             <p>Cuando acecha la maldad estará disponible en el catálogo de la gran N roja el próximo 14 de junio.</p>
           </div>
+          <div class="form-group">
+            <label for="comment">Deja un comentario:</label>
+            <textarea id="comment" class="form-control" rows="3" columns=></textarea>
+          <button class="btn btn-outline-danger ">Enviar</button>
+        </div>
+          
+        <div class="caja-comentarios">
+          <label for="">Comentarios</label>
+        <div class="comentarios"></div>
+          <p>No hay comentarios. Sé el primero!</p>
+        </div>
+
+        <div class="other-news">
+          <h3 class="text-center">Otros Artículos:</h3>
+          <div class="row">
+              <div class="col-md-4">
+                  <div class="card">
+                      <img src="imagen1.jpg" class="card-img-top" alt="Imagen">
+                      <div class="card-body">
+                          <h5 class="card-title">título</h5>
+                      </div>
+                  </div>
+              </div>
+              <div class="col-md-4">
+                  <div class="card">
+                      <img src="imagen2.jpg" class="card-img-top" alt="Imagen">
+                      <div class="card-body">
+                          <h5 class="card-title">título</h5>
+                      </div>
+                  </div>
+              </div>
+              <div class="col-md-4">
+                  <div class="card">
+                      <img src="imagen3.jpg" class="card-img-top" alt="Imagen">
+                      <div class="card-body">
+                          <h5 class="card-title">título</h5>
+                      </div>
+                  </div>
+              </div>
+          </div>
+      </div>
 
         </div>
       </section>
