--- a/contacto.html
+++ b/contacto.html
@@ -15,20 +15,7 @@
 
 <body>
   <header>
-    <nav class="navbar">
-      <div class="navbar-izquierda">
-        <a href="index.html"><img src="../img/logo-3.png" alt="Logo" class="logo"></a>
-      </div>
-
-      <ul class="nav-derecha">
-        <li><a href="acerca-de.html">ACERCA DE</a></li>
-        <li><a href="nuestras-peliculas.html">NUESTRAS PELICULAS</a></li>
-        <li><a href="novedades.html">NOVEDADES</a></li>
-        <li><a href="#">CONTACTO</a></li>
-        <li><a href="ingresar.html">INGRESAR</a></li>
-        <li><a href="carrito.html"><i class="fas fa-shopping-cart"></i></a></li>
-      </ul>
-    </nav>
+    <iframe src="partials/navbar.html" style="width: 100%; height: 100px; border: none;"></iframe>
   </header>
 
   <main>
